<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F5F5F5"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:paddingBottom="16dp"
            android:src="@drawable/blizzard" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/Question_1"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp">

            <RadioButton
                android:id="@+id/warcraft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Warcraft: Orcs and Humans"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/hearthstone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HearthStone"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/starcraft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="StarCraft"
                android:textStyle="italic" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:text="@string/Question_2"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/hearthstone_release_date"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:cursorVisible="true"
            android:hint="@string/date"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:text="@string/Question_3"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp">

            <RadioButton
                android:id="@+id/chars_27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="27"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/chars_25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/chars_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="24"
                android:textStyle="italic" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:text="@string/Question_4"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/Brigitte_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="Brigitte"
                android:textStyle="italic" />

            <CheckBox
                android:id="@+id/Doomfist_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="Doomfist"
                android:textStyle="italic" />

            <CheckBox
                android:id="@+id/Moira_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="Moira"
                android:textStyle="italic" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:text="@string/Question_5"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp">

            <RadioButton
                android:id="@+id/exp_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/exp_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7"
                android:textStyle="italic" />

            <RadioButton
                android:id="@+id/exp_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8"
                android:textStyle="italic" />
        </RadioGroup>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="submitQuiz"
            android:text="@string/submit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:text="@string/results"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:text="0"
            android:textColor="@android:color/black"
            android:textStyle="italic"
            android:visibility="invisible" />
    </LinearLayout>
</ScrollView>